# agents-fork

1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  README.md  app.py
1_foundations/me/: summary.txt
2_openai/: 2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: email_agent.py  search_agent.py
3_crew/cams_crew/: README.md  pyproject.toml
3_crew/cams_crew/src/cams_crew/: crew.py  main.py
3_crew/coder/src/coder/: crew.py
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/debate/src/debate/: crew.py
3_crew/debate/src/debate/config/: agents.yaml
3_crew/financial_researcher/output/: report.md
3_crew/financial_researcher/src/financial_researcher/: main.py
3_crew/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
3_crew/stock_picker/output/: decision.md  research_report.json  trending_companies.json
3_crew/stock_picker/src/stock_picker/: main.py
