[project]
name = "cams_crew"
version = "0.1.0"
description = "cams_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.2.1"
]

[project.scripts]
cams_crew = "cams_crew.main:run"
run_crew = "cams_crew.main:run"
train = "cams_crew.main:train"
replay = "cams_crew.main:replay"
test = "cams_crew.main:test"
run_with_trigger = "cams_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
